<resources>
    <string name="app_name">Stormy</string>
    <string name="error_title">Oops, Sorry!</string>
    <string name="error_message">There was an error.  Please try again.</string>
    <string name="error_ok_button_text">OK</string>
    <string name="network_unavailable_message">Network is Unavailable!</string>
    <string name="tempPreview">--</string>
    <string name="degree_symbol">Degree Symbol</string>
    <string name="timePreview">…</string>
    <string name="defaultLocation">Alcatraz Island, CA</string>
    <string name="defaultLocationForScreenReaders">Current Weather Location</string>
    <string name="humidityColumnHeader">HUMIDITY</string>
    <string name="humidityPreview">--</string>
    <string name="precipColumnHeader">RAIN/SNOW?</string>
    <string name="precipPreview">--</string>
    <string name="summaryPreview">Getting Current Weather…</string>
    <string name="timeString">At %1$s it will be</string>
    <string name="refreshButton">Refresh Button</string>
    <string name="percentageOutput">%d%%</string>
    <string name="integerOutput">%d</string>
</resources>
